--- a/.github/workflows/MilosKozak-patch-1_nscgmFriTzldexG6.yml
+++ b/.github/workflows/MilosKozak-patch-1_nscgmFriTzldexG6.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP app to Azure Web App - nscgmFriTzldexG6
+name: Build and deploy ASP.Net Core app to Azure Web App - nscgmFriTzldexG6
 
 on:
   push:
@@ -11,27 +11,26 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: 'windows-latest'
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@master
 
-    - name: Setup MSBuild path
-      uses: microsoft/setup-msbuild@v1.0.2
+    - name: Set up .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '5.0.x'
 
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v1.0.5
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
 
-    - name: Restore NuGet packages
-      run: nuget restore
-
-    - name: Publish to folder
-      run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
+    - name: dotnet publish
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'nscgmFriTzldexG6'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_c64446fc806b4955be92c1845b9a3793 }}
-        package: \published\
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_0c5ae937378547d693f384b262b7319b }}
+        package: ${{env.DOTNET_ROOT}}/myapp 
